--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@
 
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700|Neuton:400,700" rel="stylesheet">
+		<script async defer src="https://scripts.withcabin.com/hello.js"></script>
 	</body>
 </html>
