Highlight app page in nav

--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -13,5 +13,8 @@
         </li>
       {% endunless %}
     {% endfor %}
+    <li class="item  item--nav nav-button">  
+      <a href="/app/">Use our app</a>
+    </li>
   </ul>
 </nav>
