--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -214,6 +214,13 @@ video {
   border-radius: 2px;
 }
 
+.nav-button a {
+  background: gold;
+  padding: .5rem;
+  border-radius: 2px;
+  color: #000;
+}
+
 .social-links {
   background: $linkColour;
   padding: 1rem;
